[package]
name = "QQCleaner"
version = "0.1.0"
edition = "2021"

[dependencies]
rusqlite = { version = "0.33", features = ["bundled"] }
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"
dirs = "5.0"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# TUI dependencies
ratatui = "0.28"
crossterm = "0.28"

# For progress bars and charts
indicatif = "0.17"

# Database decryption
ntdb_unwrap = "0.2"
